# nemo

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
launch/: launch.py  simulator.py
scripts/: colcon_build.sh  rosdep.sh  simulator.sh  start.sh
scripts/movement/: backward.sh  down.sh  forward.sh  stop.sh  up.sh
src/nemo/: MANIFEST.in  package.xml  setup.py
src/nemo/config/: parameters.yaml  simulator.yaml  start.yaml
src/nemo/launch/: simulator.py  start.py
src/nemo/nemo/: planner.py
src/nemo/nemo/data/: classes.txt
src/nemo/nemo/hardware/: camera.py  hardware.py  test.py  thruster.py
src/nemo/nemo/lib/: camera.py  camera_listener.py  goal_finder.py  localiser.py  math.py  movement.py  odom_listener.py  pid.py  pressure_listener.py  states.py
src/nemo/nemo/localiser/: localiser.py  occupancy_grid.py
src/nemo/nemo/planner/: autodepth.py  depth.py  fish_tracker.py  planner.py
src/nemo/nemo/recorder/: recorder.py
src/nemo/nemo/tracker/: tracker.py
src/nemo/web_controller/: web_controller.html
src/nemo/web_controller/css/: style.css
src/nemo/web_controller/js/input/: input.js
src/nemo/web_controller/js/lib/: ros2d.js
src/nemo/web_controller/js/ros/: battery.js  camera.js  grid.js  lights.js  math.js  odom.js  planner.js  pose.js  robot.js  thruster.js
src/nemo_interfaces/: CMakeLists.txt  package.xml
src/nemo_interfaces/msg/: TrackerMsg.msg
src/nemo_server/: setup.cfg  setup.py
src/nemo_server/config/: parameters.yaml
src/nemo_server/launch/: simulator.py  start.py
src/nemo_server/nemo_server/: camera_sub.py  (+4 more)
(+76 files in other folders)
