<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nemo</name>
  <version>0.0.1</version>
  <description>Server for the Nemo drone</description>
  <maintainer email="danielweston37@gmail.com">Daniel Weston</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <exec_depend>nemo_interfaces</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
